AW | 345 | reduce max width of masthead logo to stop navigation from wrapping

--- a/assets/scss/modules/_masthead.scss
+++ b/assets/scss/modules/_masthead.scss
@@ -44,7 +44,7 @@
   letter-spacing: -0.025em;
   display: inline-block;
   word-break: break-word;
-  max-width: 35%;
+  max-width: 20%;
   @include mq(768) {
     margin-right: 1em;
   }
